# nettle

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
.playwright-mcp/: page-2026-07-04T16-18-31-166Z.yml
src/: App.tsx  fileView.test.ts  fileView.ts  ipc.ts  main.tsx  sessionReducer.test.ts  sessionReducer.ts  store.ts  styles.css  util.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  local_fs.rs  main.rs  state.rs  terminal.rs  tray.rs  web.rs  web_panel.html
src-tauri/src/config/: mod.rs  model.rs  store.rs
src-tauri/src/ipc/: commands.rs  events.rs  types.rs
src-tauri/src/ports/: forwards.rs  mod.rs  parse.rs  scanner.rs
src-tauri/src/sftp/: browse.rs  mod.rs  transfers.rs
src-tauri/src/ssh/: auth.rs  dns.rs  handler.rs  mod.rs  session.rs
src-tauri/tests/: e2e.rs
src/components/: AboutModal.tsx  DashboardView.tsx  FilesView.tsx  Modals.tsx  PortsView.tsx  RemoteControlModal.tsx  SetModal.tsx  Sidebar.tsx  TerminalView.tsx  TitleBar.tsx  Toast.tsx  Topbar.tsx
