[package]
name = "nettle"
version = "0.1.3"
description = "A resilient SSH client with live port forwarding"
authors = ["flo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nettle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.62.1"
russh-sftp = "2.3.0"
tokio = { version = "1.52.3", features = ["full"] }
thiserror = "2.0.18"
tokio-util = "0.7.18"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
tauri-plugin-window-state = "2.4.1"

[dev-dependencies]
tempfile = "3.27.0"

